--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         </span>
         <span class="pidecim-NEp-sub-1">PİDECİM</span>
       </p>
-      <p class="anasayfa-Qz8">anasayfa</p>
-      <p class="hakkmzda-Y4k">hakkımızda</p>
-      <p class="iletiim-s72">iletişim</p>
+      <p class="anasayfa-Qz8"><a href="index.html">anasayfa</p></a>
+      <p class="hakkmzda-Y4k"><a href="frame-2.html">hakkımızda</p></a>
+      <p class="iletiim-s72"><a href="frame-3.html">
+        iletişim</p></a>
     </div>
     <div class="auto-group-1azp-Mnt">
       <img class="anasayfapide3-1-VPJ" src="./assets/anasayfapide3-1.png"/>
