--- a/frame-2.html
+++ b/frame-2.html
@@ -22,7 +22,7 @@
       </span>
       <span class="pidecim-VpQ-sub-1">PİDECİM</span>
     </p>
-    <p class="anasayfa-mfS"><a href="frame-1.html">
+    <p class="anasayfa-mfS"><a href="index.html">
       anasayfa</p></a>
     <p class="hakkmzda-siU"><a href="frame-2.html">
       hakkımızda</p></a>
