--- a/frame-3.html
+++ b/frame-3.html
@@ -39,7 +39,7 @@
       </div>
     </div>
   </div>
-  <p class="anasayfa-mkg"><a href="frame-1.html">
+  <p class="anasayfa-mkg"><a href="index.html">
     anasayfa</p></a>
   <div class="auto-group-zecc-t4c">
     <div class="auto-group-gawn-d2C">
